<resources>
    <string name="app_name">Contactos</string>
    <string name="nombre_contacto">Nombre completo</string>
    <string name="seleccionar_fecha">Seleccione una fecha</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="descripcion_contacto">Descripción del Contacto</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="confirmar">Confirmar Datos</string>

</resources>