<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_contacto"
        android:paddingTop="20dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/seleccionar_fecha"
        android:paddingTop="35dp"
        />
    
    <!--<EditText
        android:id="@+id/et_date"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/seleccionar_fecha"
        android:textSize="30sp"
        android:paddingLeft="10dp"
        android:textAlignment="center"
        />-->


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="35dp"
        android:hint="@string/telefono"
        android:inputType="phone"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="35dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion_contacto"
        android:paddingTop="35dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_siguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/siguiente"
            android:layout_alignParentBottom="true"
            android:onClick="btnSiguiente">
        </Button>

    </RelativeLayout>



</LinearLayout>